k8s/timeline-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeline-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeline-service
  template:
    metadata:
      labels:
        app: timeline-service
    spec:
      containers:
        - name: timeline-service
          image: jaimydocker/jaimy_docker:timeline-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 3000
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
