k8s/timeline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeline-service
spec:
  selector:
    app: timeline-service
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
