k8s/tweet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tweet-service
spec:
  selector:
    app: tweet-service
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
