k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  rules:
    - host: microservices.local
      http:
        paths:
          - pathType: Prefix
            path: /tweets
            backend:
              service:
                name: tweet-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /timeline
            backend:
              service:
                name: timeline-service
                port:
                  number: 4000
